--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
               <em>preprint
               <br>
               <br>
-              <a href="data/AE-Reorient.pdf">[PDF]</a>
+              <a href="data/Interactive_Shape_Estimation.pdf">[PDF]</a>
               <br>
               <p> We present an interactive shape estimation framework that actively explores the scene and allows the robot to generate interaction actions guided by uncertainty maps to estimate object shapes in cluttered scene.</p>
             </td>
