--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <td style="padding:20px;width:100%;vertical-align:middle">
               <heading>Honors and Awards</heading>
               <p>
-                <li style="margin: 5px;"> Second Prize of the Final of the 13th Chinese Mathematics Competitions</li>
+                <li style="margin: 5px;"> 2023 First Class School Scholarship</li>
               </p>
             </td>
           </tr>
@@ -91,7 +91,7 @@
             <heading>Academic Services</heading>
             <p>
               <li style="margin: 5px;"> 
-                <b>Conference Reviewer:</b> ICRA
+                <b>Conference Reviewer:</b> ICRA 2024
               </li>
             </p>
           </td>
