--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           
           <tr>
             <td style="padding:20px;width:30%;max-width:30%" align="center">
-              <img style="width:100%;max-width:100%" src='images/AE-Reorient.png' alt="dise">
+              <img style="width:100%;max-width:100%" src='images/fig2.png' alt="dise">
             </td>
             <td width="75%" valign="center">
               <papertitle>Interactive Shape Estimation for Densely Cluttered Objects</papertitle>
@@ -60,7 +60,7 @@
               <em>preprint
               <br>
               <br>
-              <a href="data/Interactive_Shape_Estimation.pdf">[PDF]</a>
+              <a href="data/Interactive Shape Estimation.pdf">[PDF]</a>
               <br>
               <p> We present an interactive shape estimation framework that actively explores the scene and allows the robot to generate interaction actions guided by uncertainty maps to estimate object shapes in cluttered scene.</p>
             </td>
