--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           
           <tr>
             <td style="padding:20px;width:30%;max-width:30%" align="center">
-              <img style="width:100%;max-width:100%" src='images/fig2.png' alt="dise">
+              <img style="width:100%;max-width:100%" src='images/fig2.jpg' alt="dise">
             </td>
             <td width="75%" valign="center">
               <papertitle>Interactive Shape Estimation for Densely Cluttered Objects</papertitle>
