--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <td style="padding:20px;width:100%;vertical-align:middle">
               <heading>Honors and Awards</heading>
               <p>
-                <li style="margin: 5px;"> 2023 First Class School Scholarship</li>
+                <li style="margin: 5px;"> 2023 School Scholarship</li>
               </p>
             </td>
           </tr>
