--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
               <heading>Honors and Awards</heading>
               <p>
                 <li style="margin: 5px;"> 2023 First School Scholarship</li>
+                <li style="margin: 5px;"> Second Prize in the Final Round of the Chinese Mathematical Competition</li>
               </p>
             </td>
           </tr>
