--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <td width="75%" valign="center">
               <papertitle>Interactive Shape Estimation for Densely Cluttered Objects</papertitle>
               <br>
-              <strong>Jiangfan Ran</strong>, Zhenyu Wu, Ziwei Wang, Haibin Yan
+              <strong>Jiangfan Ran | 冉江帆</strong>, Zhenyu Wu, Ziwei Wang, Haibin Yan
               <br>
               <br>
               <em>preprint
