--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <tr style="padding:0px">
             <td style="padding:2.5%;width:63%;vertical-align:middle">
               <p style="text-align:center">
-                <name>Jiangfan Ran</name>
+                <name>Jiangfan Ran | 冉江帆</name>
               </p>
               <p>Jiangfan Ran is a master's student majoring in mechanical engineering from the School of Automation, Beijing University of Posts and Telecommunications, advised by Prof.Haibin Yan. He received his BS degree in electrical engineering from the School of information engineering, Henan University of science and technology, Luoyang, in 2022.
                  His main research areas are computer vision and intelligent robotics.
@@ -54,7 +54,7 @@
             <td width="75%" valign="center">
               <papertitle>Interactive Shape Estimation for Densely Cluttered Objects</papertitle>
               <br>
-              <strong>Jiangfan Ran | 冉江帆</strong>, Zhenyu Wu, Ziwei Wang, Haibin Yan
+              <strong>Jiangfan Ran</strong>, Zhenyu Wu, Ziwei Wang, Haibin Yan
               <br>
               <br>
               <em>preprint
